--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>React Challenge - "Video"</title>
+  <script src="https://kit.fontawesome.com/4628e41e12.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
